# python-project-lvl2

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  cli.py  generate_diff.py  open.py  parser.py  tree.py
gendiff/formatters/: format_diff.py  formatter.py  json.py  plain.py  sort_diff_keys.py  sort_keys.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py  gendiff_default.py
tests/: __init__.py  expected.py  test_generate_diff.py  test_json_diff.py  test_yaml_diff.py
tests/fixtures/: correct.stylish  correct_answer.json  file1.json  file1.yaml
