[tool.poetry]
name = "hexlet_code"
version = "0.4.0"
description = "hexlet project lvl2"
classifiers = [
  "Environment :: Console"
]
authors = ["Paul K. <gg1779@gmail.com>"]
repository = "https://github.com/PaulG17/python-project-lvl2.git"

packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.2"
coverage = "^5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"