[tool.poetry]
name = "hexlet_code"
version = "0.5.1"
description = "hexlet project lvl2"
classifiers = [
    "Topic : Education",
    "Programming Language : Python3"
]
authors = ["Paul K. <gg1779@gmail.com>"]
repository = "https://github.com/PaulG17/python-project-lvl2.git"

packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.2"
coverage = "^5.4"
pytest-cov = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
